# hoi4simulator

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: mutants.toml
.github/workflows/: ci.yml  mutation.yml
benches/: simulation.rs  solver.rs
examples/: france_1936_plan.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: clausewitz_parser.rs  date_parser.rs  simulator_actions.rs
src/: lib.rs
src/data/: clausewitz.rs  france_1936.rs  mod.rs
src/domain/: calendar.rs  focus.rs  laws.rs  mod.rs  planning.rs  politics.rs  research.rs  resources.rs  templates.rs  timeline.rs
src/scenario/: france_1936.rs  mod.rs
src/sim/: actions.rs  engine.rs  mod.rs  rules.rs  state.rs
src/solver/: beam.rs  france.rs  mod.rs
