[package]
name = "hoi4simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
fory = "0.16"
fory-core = "0.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"
tempfile = "3.18"

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "solver"
harness = false

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
